Index.html and CSS files
Created the index file and added navigation. Creates CSS to start stylizing it.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+         <link rel="stylesheet" href="styles.css">
+        <title>Title</title>
+    </head>
+    <body>
+        
+    <header>
+          <nav class="horizontal">       
+            <ul>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="Blogs/Tips.html">Blogs/Tips</a></li>
+               <li><a href="Gallery.html">Gallery</a></li>
+               <li><a href="Services.html">Services</a></li>
+               <li><a href="ContactUs.html">Contact Us</a></li>
+            </ul>
+         </nav> 
+        </header>
+        
+    </body>
+</html>
 
