--- a/Gallery.html
+++ b/Gallery.html
@@ -1,30 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <title>BrightSprout Landscaping</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, intial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-
-<body>
-    <div class="header">
-        <div class="navbar">
-            <div class="logo">
-                <a href="#"><img src="images/logo.png"></a>
-            </div>
-            <div class="menu">
-                <ul>
-                    <li>Home</li>
-                    <li>Blog/Tips</li>
-                    <li>Gallery</li>
-                    <li>Services/Pricing</li>
-                    <li>About/Contact Us</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</body>
-
+    <head>
+        <meta charset="UTF-8" />
+        <title>BrightSprout Landscaping</title>
+    </head>
+    <body></body>
 </html>
