--- a/Template.html
+++ b/Template.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>BrightSprout Landscaping</title>
-    </head>
-    <body></body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BrightSprout Landscaping</title>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+    <header>
+        <div class="logo">
+            <img src="BrightSprout Logo.png" alt="BrightSprout Logo" />
+        </div>
+
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Blog/Tips</a>
+            <a href="#">Gallery</a>
+            <a href="#">Services</a>
+            <a href="#" class="contact-btn">Contact Us</a>
+        </nav>
+    </header>
+</body>
+
 </html>
