--- a/Template.html
+++ b/Template.html
@@ -22,6 +22,43 @@
             <a href="#" class="contact-btn">Contact Us</a>
         </nav>
     </header>
+
+
+
+    <footer>
+        <div class="footer-top">
+            <div class="footer-logo">
+                <img src="BrightSprout Logo.png" alt="BrightSprout Logo" />
+            </div>
+
+            <div class="footer-socials">
+                <a href="#"><img src="facebook.png" alt="Facebook" /></a>
+                <a href="#"><img src="linkedin.png" alt="LinkedIn" /></a>
+                <a href="#"><img src="youtube.png" alt="YouTube" /></a>
+                <a href="#"><img src="instagram.png" alt="Instagram" /></a>
+            </div>
+
+            <div class="footer-contact">
+                <p>Phone: (555) 123-LAND</p>
+                <p>Email: <a href="mailto:info@brightsprout.com">info@brightsprout.com</a></p>
+            </div>
+
+            <div class="footer-nav">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Blog/Tips</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>© 2025 BrightSprout Landscaping. All Rights Reserved | <a href="#">Mail Opt-Out</a> | <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
