Finished Main element and placed template
I added css to the main element and pasted it onto the template. I also pasted the template onto the rest of the pages

--- a/Template.html
+++ b/Template.html
@@ -23,7 +23,10 @@
         </nav>
     </header>
 
-
+<main>
+    <h1> *Name of Page* </h1>
+    <p> body text for the page</p>
+</main>
 
     <footer>
         <div class="footer-top">
