--- a/about.html
+++ b/about.html
@@ -3,24 +3,65 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BrightSprout Landscaping</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
-<body></body>
+<body>
+    <header>
+        <div class="logo">
+            <img src="BrightSprout Logo.png" alt="BrightSprout Logo" />
+        </div>
 
-</html>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Blog/Tips</a>
+            <a href="#">Gallery</a>
+            <a href="#">Services</a>
+            <a href="#" class="contact-btn">Contact Us</a>
+        </nav>
+    </header>
 
 <main>
     <h1> *Name of Page* </h1>
     <p> body text for the page</p>
 </main>
 
-<footer>
-    <h3> BrightSprout Landscaping</h3>
-    <p>"I believe a garden should be both beautiful and kind to the planet."</p>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="index.html">Tips</a>
-    <a href="services.html">Services</a>
-    <a href="index.html">Contact Us</a>
-</footer>
+    <footer>
+        <div class="footer-top">
+            <div class="footer-logo">
+                <img src="BrightSprout Logo.png" alt="BrightSprout Logo" />
+            </div>
+
+            <div class="footer-socials">
+                <a href="#"><img src="facebook.png" alt="Facebook" /></a>
+                <a href="#"><img src="linkedin.png" alt="LinkedIn" /></a>
+                <a href="#"><img src="youtube.png" alt="YouTube" /></a>
+                <a href="#"><img src="instagram.png" alt="Instagram" /></a>
+            </div>
+
+            <div class="footer-contact">
+                <p>Phone: (555) 123-LAND</p>
+                <p>Email: <a href="mailto:info@brightsprout.com">info@brightsprout.com</a></p>
+            </div>
+
+            <div class="footer-nav">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Blog/Tips</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>© 2025 BrightSprout Landscaping. All Rights Reserved | <a href="#">Mail Opt-Out</a> | <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
+        </div>
+    </footer>
+
+</body>
+
+</html>
