--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="BrightSprout Logo.png" alt="BrightSprout Logo" />
+            <img src="BrightSproutLogo.png" alt="BrightSproutLogo" />
         </div>
 
         <nav>
@@ -23,15 +23,36 @@
         </nav>
     </header>
 
-<main>
-    <h1> *Name of Page* </h1>
-    <p> body text for the page</p>
-</main>
+    <main>
+        <section class="hero">
+            <img src="house3After.png" alt="Beautiful Landscape" class="hero-image" />
+            <div class="hero-text">
+                <h1>Name of Page</h1>
+                <p>Subtitle Text Subtitle Text Subtitle Text Subtitle Text Subtitle Text Subtitle Text</p>
+            </div>
+        </section>
+
+        <section class="content">
+            <p>Body Text for Page</p>
+        </section>
+
+        <section class="cards">
+            <div class="card">
+                <h2>Title</h2>
+            </div>
+            <div class="card">
+                <h2>Title</h2>
+            </div>
+            <div class="card">
+                <h2>Title</h2>
+            </div>
+        </section>
+    </main>
 
     <footer>
         <div class="footer-top">
             <div class="footer-logo">
-                <img src="BrightSprout Logo.png" alt="BrightSprout Logo" />
+                <img src="BrightSproutLogo.png" alt="BrightSproutLogo" />
             </div>
 
             <div class="footer-socials">
@@ -59,6 +80,9 @@
 
         <div class="footer-bottom">
             <p>© 2025 BrightSprout Landscaping. All Rights Reserved | <a href="#">Mail Opt-Out</a> | <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
+        </div>
+        <div class="footer-disclaimer">
+            <p>Disclaimer: This site was created as part of the Web Development II course at Northwest Missouri State University and was developed to learn and enhance the concepts within that course. It is not intended for public use.</p>
         </div>
     </footer>
 
