--- a/Gallery.html
+++ b/Gallery.html
@@ -56,10 +56,10 @@
             </div>
 
             <div class="footer-socials">
-                <a href="#"><img src="facebook.png" alt="Facebook" /></a>
-                <a href="#"><img src="linkedin.png" alt="LinkedIn" /></a>
-                <a href="#"><img src="youtube.png" alt="YouTube" /></a>
-                <a href="#"><img src="instagram.png" alt="Instagram" /></a>
+                <a href="#"><img src="facebook.png" alt="facebook" /></a>
+                <a href="#"><img src="linkedin.png" alt="linkedin" /></a>
+                <a href="#"><img src="youtube.png" alt="youtube" /></a>
+                <a href="#"><img src="instagram.png" alt="instagram" /></a>
             </div>
 
             <div class="footer-contact">
