--- a/services.html
+++ b/services.html
@@ -27,25 +27,49 @@
         <section class="hero">
             <img src="house3After.png" alt="Beautiful Landscape" class="hero-image" />
             <div class="hero-text">
-                <h1>Name of Page</h1>
-                <p>Subtitle Text Subtitle Text Subtitle Text Subtitle Text Subtitle Text Subtitle Text</p>
+                <h1>Contact Us</h1>
+                <p>Learn our values and how to contact us.</p>
             </div>
         </section>
 
         <section class="content">
-            <p>Body Text for Page</p>
+            <p>Founded in 2018 by passionate horticulturist Jamie Rivers, BrightSprout Landscaping was born from a vision: to create outdoor spaces that are not only stunning but also environmentally responsible. What started as a small design studio in Missouri has grown into a dedicated team of landscaping professionals, each bringing unique skills and creativity to every project. At BrightSprout, we believe that a landscape should do more than just look beautiful - it should work in harmony with nature. By combining expert design with sustainable practices, we craft outdoor spaces that thrive year-round, support local ecosystems, and reflect the unique character of each property. Whether it’s a cozy backyard garden, a sprawling lawn, or a vibrant commercial property, our designs are tailored to enhance the beauty and functionality of every space we touch.</p>
         </section>
 
         <section class="cards">
             <div class="card">
-                <h2>Title</h2>
+                <h2>Jamie Rivers</h2>
+                <h3>Owner & Designer</h3>
             </div>
+            <section class="contactPics">
+                <img src="jamiesmall.jpg" alt="Picture of our owner, Jamie Rivers">
+            </section>
+            <section class="cardsInfo">
+                <p>Jamie’s expertise in horticulture and sustainable design guides every project. With a keen eye for detail and a deep respect for the natural environment, Jamie ensures each landscape is not only visually stunning but ecologically responsible.</p>
+            </section>
+
+
             <div class="card">
-                <h2>Title</h2>
+                <h2>Carlos Lopez</h2>
+                <h3>Irrigation Specialist</h3>
             </div>
+             <section class="contactPics">
+                <img src="carlos.jpg" alt="Picture of our irrigation specialist, Carlos Lopez">
+            </section>
+            <section class="cardsInfo">
+                <p>Carlos is the wizard behind our water-efficient systems. His innovative irrigation solutions ensure your landscape flourishes while conserving one of our most precious resources.</p>
+            </section>
+
             <div class="card">
-                <h2>Title</h2>
+                <h2>Mina Patel</h2>
+                <h3>Maintenance Lead</h3>
             </div>
+        </section>
+         <section class="contactPics">
+                <img src="mina.png" alt="Picture of our maintenance lead, Mina Patel">
+            </section>
+        <section class="cardsInfo">
+            <p>Mina keeps every garden at its peak through all seasons. Her knowledge of plants, soils, and seasonal care routines ensures that your landscape continues to thrive long after installation.</p>
         </section>
     </main>
 
