blog/tips.html, styles.css
content

--- a/Blog & Tips.html
+++ b/Blog & Tips.html
@@ -27,24 +27,79 @@
         <section class="hero">
             <img src="house3After.png" alt="Beautiful Landscape" class="hero-image" />
             <div class="hero-text">
-                <h1>Name of Page</h1>
-                <p>Subtitle Text Subtitle Text Subtitle Text Subtitle Text Subtitle Text Subtitle Text</p>
+                <h1>Blog/Tips</h1>
+                <p>Explore featured articles on sustainable landscaping, gardening tips for Missouri climates, water conservation, seasonal maintenance guides.</p>
             </div>
         </section>
 
-        <section class="content">
-            <p>Body Text for Page</p>
-        </section>
 
         <section class="cards">
             <div class="card">
-                <h2>Title</h2>
+                <h2>Sustainable Landscaping & Water Conservation</h2>
+            </div>
+            <div class="photo-row">
+                <div class="photo-card">
+                    <img src="Sustainable Landscaping & Water Conservation-01.png" alt="Sustainable Landscaping & Water Conservation-01">
+                    <button class="view-btn">Click to View</button>
+                    <p class="photo-caption"><strong>Missouri Department of Conservation</strong><br>Landscaping for Nature</p>
+                </div>
+
+                <div class="photo-card">
+                    <img src="Sustainable Landscaping & Water Conservation-02.png" alt="Sustainable Landscaping & Water Conservation-02">
+                    <button class="view-btn">Click to View</button>
+                    <p class="photo-caption"><strong>Plants Unlimited Durham</strong><br>Sustainable Modern Landscape Design: Green Solutions for a Greener Tomorrow</p>
+                </div>
+
+                <div class="photo-card">
+                    <img src="Sustainable Landscaping & Water Conservation-03.png" alt="Sustainable Landscaping & Water Conservation-03">
+                    <button class="view-btn">Click to View</button>
+                    <p class="photo-caption"><strong>Yavapai Landscaping</strong><br>The Crucial Role of Landscape Design in Water Conservation</p>
+                </div>
             </div>
             <div class="card">
-                <h2>Title</h2>
+                <h2>Missouri - Specific Gardening Tips</h2>
             </div>
+            <div class="photo-row">
+                <div class="photo-card">
+                    <img src="Missouri - Specific Gardening Tips-01.png" alt="Missouri - Specific Gardening Tips-01">
+                    <button class="view-btn">Click to View</button>
+                    <p class="photo-caption"><strong>Missouri Department of Conservation</strong><br>Landscaping for Nature</p>
+                </div>
+
+                <div class="photo-card">
+                    <img src="Missouri - Specific Gardening Tips-02.png" alt="Missouri - Specific Gardening Tips-02">
+                    <button class="view-btn">Click to View</button>
+                    <p class="photo-caption"><strong>Plants Unlimited Durham</strong><br>Sustainable Modern Landscape Design: Green Solutions for a Greener Tomorrow</p>
+                </div>
+
+                <div class="photo-card">
+                    <img src="Missouri - Specific Gardening Tips-03.png" alt="Missouri - Specific Gardening Tips-03">
+                    <button class="view-btn">Click to View</button>
+                    <p class="photo-caption"><strong>Yavapai Landscaping</strong><br>The Crucial Role of Landscape Design in Water Conservation</p>
+                </div>
+            </div>
+
             <div class="card">
-                <h2>Title</h2>
+                <h2>Seasonal Maintenance Guides</h2>
+            </div>
+            <div class="photo-row">
+                <div class="photo-card">
+                    <img src="Seasonal Maintenance Guides-01.png" alt="Seasonal Maintenance Guides-01">
+                    <button class="view-btn">Click to View</button>
+                    <p class="photo-caption"><strong>Missouri Department of Conservation</strong><br>Landscaping for Nature</p>
+                </div>
+
+                <div class="photo-card">
+                    <img src="Seasonal Maintenance Guides-02.png" alt="Seasonal Maintenance Guides-02">
+                    <button class="view-btn">Click to View</button>
+                    <p class="photo-caption"><strong>Plants Unlimited Durham</strong><br>Sustainable Modern Landscape Design: Green Solutions for a Greener Tomorrow</p>
+                </div>
+
+                <div class="photo-card">
+                    <img src="Seasonal Maintenance Guides-03.png" alt="Seasonal Maintenance Guides-03">
+                    <button class="view-btn">Click to View</button>
+                    <p class="photo-caption"><strong>Yavapai Landscaping</strong><br>The Crucial Role of Landscape Design in Water Conservation</p>
+                </div>
             </div>
         </section>
     </main>
