blog/tips.html, styles.css
content

--- a/blogandtips.html
+++ b/blogandtips.html
@@ -39,19 +39,19 @@
             </div>
             <div class="photo-row">
                 <div class="photo-card">
-                    <img src="Sustainable Landscaping & Water Conservation-01.png" alt="Sustainable Landscaping & Water Conservation-01">
+                    <img src="sustainablelandscapingwaterconservation01.png" alt="sustainablelandscapingwaterconservation01">
                     <button class="view-btn">Click to View</button>
                     <p class="photo-caption"><strong>Missouri Department of Conservation</strong><br>Landscaping for Nature</p>
                 </div>
 
                 <div class="photo-card">
-                    <img src="Sustainable Landscaping & Water Conservation-02.png" alt="Sustainable Landscaping & Water Conservation-02">
+                    <img src="sustainablelandscapingwaterconservation02.png" alt="sustainablelandscapingwaterconservation02">
                     <button class="view-btn">Click to View</button>
                     <p class="photo-caption"><strong>Plants Unlimited Durham</strong><br>Sustainable Modern Landscape Design: Green Solutions for a Greener Tomorrow</p>
                 </div>
 
                 <div class="photo-card">
-                    <img src="Sustainable Landscaping & Water Conservation-03.png" alt="Sustainable Landscaping & Water Conservation-03">
+                    <img src="sustainablelandscapingwaterconservation03.png" alt="sustainablelandscapingwaterconservation03">
                     <button class="view-btn">Click to View</button>
                     <p class="photo-caption"><strong>Yavapai Landscaping</strong><br>The Crucial Role of Landscape Design in Water Conservation</p>
                 </div>
@@ -61,19 +61,19 @@
             </div>
             <div class="photo-row">
                 <div class="photo-card">
-                    <img src="Missouri - Specific Gardening Tips-01.png" alt="Missouri - Specific Gardening Tips-01">
+                    <img src="missourispecificgardeningtips01.png" alt="missourispecificgardeningtips01">
                     <button class="view-btn">Click to View</button>
                     <p class="photo-caption"><strong>Missouri Department of Conservation</strong><br>Landscaping for Nature</p>
                 </div>
 
                 <div class="photo-card">
-                    <img src="Missouri - Specific Gardening Tips-02.png" alt="Missouri - Specific Gardening Tips-02">
+                    <img src="missourispecificgardeningtips02.png" alt="missourispecificgardeningtips02">
                     <button class="view-btn">Click to View</button>
                     <p class="photo-caption"><strong>Plants Unlimited Durham</strong><br>Sustainable Modern Landscape Design: Green Solutions for a Greener Tomorrow</p>
                 </div>
 
                 <div class="photo-card">
-                    <img src="Missouri - Specific Gardening Tips-03.png" alt="Missouri - Specific Gardening Tips-03">
+                    <img src="missourispecificgardeningtips03.png" alt="missourispecificgardeningtips03">
                     <button class="view-btn">Click to View</button>
                     <p class="photo-caption"><strong>Yavapai Landscaping</strong><br>The Crucial Role of Landscape Design in Water Conservation</p>
                 </div>
@@ -84,19 +84,19 @@
             </div>
             <div class="photo-row">
                 <div class="photo-card">
-                    <img src="Seasonal Maintenance Guides-01.png" alt="Seasonal Maintenance Guides-01">
+                    <img src="seasonalmaintenanceguides01.png" alt="seasonalmaintenanceguides01">
                     <button class="view-btn">Click to View</button>
                     <p class="photo-caption"><strong>Missouri Department of Conservation</strong><br>Landscaping for Nature</p>
                 </div>
 
                 <div class="photo-card">
-                    <img src="Seasonal Maintenance Guides-02.png" alt="Seasonal Maintenance Guides-02">
+                    <img src="seasonalmaintenanceguides02.png" alt="seasonalmaintenanceguides02">
                     <button class="view-btn">Click to View</button>
                     <p class="photo-caption"><strong>Plants Unlimited Durham</strong><br>Sustainable Modern Landscape Design: Green Solutions for a Greener Tomorrow</p>
                 </div>
 
                 <div class="photo-card">
-                    <img src="Seasonal Maintenance Guides-03.png" alt="Seasonal Maintenance Guides-03">
+                    <img src="seasonalmaintenanceguides03.png" alt="seasonalmaintenanceguides03">
                     <button class="view-btn">Click to View</button>
                     <p class="photo-caption"><strong>Yavapai Landscaping</strong><br>The Crucial Role of Landscape Design in Water Conservation</p>
                 </div>
