blogandtips.html, gallery.html, styles.css
Blog and tips, gallery, css, linked pages in nav (header and footer)

--- a/services.html
+++ b/services.html
@@ -15,11 +15,11 @@
         </div>
 
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Blog/Tips</a>
-            <a href="#">Gallery</a>
-            <a href="#">Services</a>
-            <a href="#" class="contact-btn">Contact Us</a>
+            <a href="index.html">Home</a>
+            <a href="blogandtips.html">Blog/Tips</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html" class="contact-btn">Contact Us</a>
         </nav>
     </header>
 
@@ -109,11 +109,11 @@
 
             <div class="footer-nav">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Blog/Tips</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="blogandtips.html">Blog/Tips</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
