--- a/Gallery.html
+++ b/Gallery.html
@@ -14,49 +14,103 @@
             <img src="BrightSproutLogo.png" alt="BrightSproutLogo" />
         </div>
 
-        <nav> <a href="#">Home</a> <a href="#">Blog/Tips</a> <a href="#">Gallery</a> <a href="#">Services</a> <a href="#" class="contact-btn">Contact Us</a> </nav>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="blogandtips.html">Blog/Tips</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html" class="contact-btn">Contact Us</a>
+        </nav>
     </header>
-    <main class="gallery-main">
-        <section class="hero"> <img src="house3After.png" alt="Landscaped Home" class="hero-image" />
+
+    <main>
+        <section class="hero">
+            <img src="house3After.png" alt="Beautiful Landscape" class="hero-image" />
             <div class="hero-text">
-                <h1><em>Gallery</em></h1>
-                <p>Browse our transformations – each project highlights our creative, sustainable approach.</p>
+                <h1>Gallery</h1>
+                <p>Browse our transformations - each project highlights our creative, sustainable approach.</p>
             </div>
         </section>
-        <section class="content-box">
-            <h2>Before</h2>
-            <div class="image-row"> <img src="redDoorHouse.jpg" alt="redDoorHouse" /> <img src="house3Before.jpg" alt="house3Before" /> </div>
-        </section>
-        <section class="content-box">
-            <h2>After</h2>
-            <div class="image-row"> <img src="redDoorHouseAfter.png" alt="redDoorHouseAfter" /> <img src="house3After(actual).png" alt="house3After(actual)" /> </div>
-        </section>
-        <section class="content-box">
-            <h2>Other Completed Projects</h2>
-            <div class="gallery-grid"> <img src="backyard.jpg" alt="backyard" />
-                <div class="side-column"> <img src="house2.jpg" alt="house2" /> <img src="patio.jpg" alt="patio" /> <img src="house1.jpg" alt="house1" /> </div>
+
+        <section class="cards">
+            <div class="card">
+                <h2>Before</h2>
             </div>
         </section>
-        <div class="button-container"> <a href="#" class="services-btn">Services & Pricing</a> </div>
+
+        <section class="gallery-section beige-section">
+            <div class="gallery-row">
+                <img src="redDoorHouse.jpg" alt="redDoorHouse">
+                <img src="house3Before.jpg" alt="house3Before">
+            </div>
+        </section>
+
+        <section class="cards">
+            <div class="card">
+                <h2>After</h2>
+            </div>
+        </section>
+
+        <section class="gallery-section beige-section">
+            <div class="gallery-row">
+                <img src="redDoorHouseAfter.png" alt="redDoorHouseAfter">
+                <img src="house3After(actual).png" alt="house3After(actual)">
+            </div>
+        </section>
+
+        <section class="cards">
+            <div class="card">
+                <h2>Other Completed Projects</h2>
+            </div>
+        </section>
+
+        <section class="gallery-section beige-section">
+            <div class="gallery-grid">
+                <div class="gallery-column tall">
+                    <img src="backyard.jpg" alt="backyard">
+                </div>
+                <div class="gallery-column small">
+                    <img src="house2.jpg" alt="house2">
+                    <img src="patio.jpg" alt="patio">
+                    <img src="house1.jpg" alt="house1">
+                </div>
+            </div>
+        </section>
+
+        <section class="gallery-button">
+            <a href="services.html" class="services-btn">Services and Pricing</a>
+        </section>
     </main>
+
     <footer>
         <div class="footer-top">
-            <div class="footer-logo"> <img src="BrightSproutLogo.png" alt="BrightSproutLogo" /> </div>
-            <div class="footer-socials"> <a href="#"><img src="facebook.png" alt="facebook" /></a> <a href="#"><img src="linkedin.png" alt="linkedin" /></a> <a href="#"><img src="youtube.png" alt="youtube" /></a> <a href="#"><img src="instagram.png" alt="instagram" /></a> </div>
+            <div class="footer-logo">
+                <img src="BrightSproutLogo.png" alt="BrightSproutLogo" />
+            </div>
+
+            <div class="footer-socials">
+                <a href="#"><img src="facebook.png" alt="facebook" /></a>
+                <a href="#"><img src="linkedin.png" alt="linkedin" /></a>
+                <a href="#"><img src="youtube.png" alt="youtube" /></a>
+                <a href="#"><img src="instagram.png" alt="instagram" /></a>
+            </div>
+
             <div class="footer-contact">
                 <p>Phone: (555) 123-LAND</p>
                 <p>Email: <a href="mailto:info@brightsprout.com">info@brightsprout.com</a></p>
             </div>
+
             <div class="footer-nav">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Blog/Tips</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="blogandtips.html">Blog/Tips</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
+
         <div class="footer-bottom">
             <p>© 2025 BrightSprout Landscaping. All Rights Reserved | <a href="#">Mail Opt-Out</a> | <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
         </div>
