--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img src="house1.jpg" alt="Landscape Example 3" />
             </div>
 
-            <div><a href="Gallery.html" class="gallery-button-class">View More!</a></div>
+            <div><a href="gallery.html" class="gallery-button-class">View More!</a></div>
 
             <div class="card why-section">
                 <h2>Why Choose BrightSprout?</h2>
