--- a/blogandtips.html
+++ b/blogandtips.html
@@ -25,7 +25,7 @@
 
     <main>
         <section class="hero">
-            <img src="clientimages/house3after.png" alt="Beautiful Landscape" class="hero-image" />
+            <img src="clientimages/house3after(actual).png" alt="Beautiful Landscape" class="hero-image" />
             <div class="hero-text">
                 <h1>Blog/Tips</h1>
                 <p>Explore featured articles on sustainable landscaping, gardening tips for Missouri climates, water conservation, seasonal maintenance guides.</p>
