--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
 
     <main>
         <section class="hero">
-            <img src="house3After.png" alt="Beautiful Landscape" class="hero-image" />
+            <img src="clientimages/house3after(actual).png" alt="Beautiful Landscape" class="hero-image" />
             <div class="hero-text">
                 <h1>Gallery</h1>
                 <p>Browse our transformations - each project highlights our creative, sustainable approach.</p>
@@ -54,7 +54,7 @@
         <section class="gallery-section beige-section">
             <div class="gallery-row">
                 <img src="clientimages/reddoorhouseafter.png" alt="reddoorhouseafter">
-                <img src="clientimages/house3after(actual).png" alt="house3after(actual)">
+                <img src="clientimages/house3after.png" alt="house3after">
             </div>
         </section>
 
@@ -85,7 +85,7 @@
     <footer>
         <div class="footer-top">
             <div class="footer-logo">
-                <img src="BrightSproutLogo.png" alt="BrightSproutLogo" />
+                <img src="clientimages/brightsproutlogo.png" alt="BrightSproutLogo" />
             </div>
 
             <div class="footer-socials">
