--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="BrightSproutLogo.png" alt="BrightSproutLogo" />
+            <img src="clientimages/brightsproutlogo.png" alt="BrightSproutLogo" />
         </div>
 
         <nav>
@@ -26,7 +26,7 @@
     <main>
 
         <section class="hero">
-            <img src="house3After.png" alt="Beautiful Landscape" class="hero-image" />
+            <img src="clientimages/house3after(actual).png" alt="Beautiful Landscape" class="hero-image" />
             <div class="hero-text">
                 <h1>Contact Us</h1>
                 <p>Learn our values and how to contact us.</p>
@@ -42,7 +42,7 @@
         <section class="cards">
             <div class="card">
                 <h2>Jamie Rivers</h2>
-                <h3>Owner & Designer</h3>
+                <h3>Owner and Designer</h3>
             </div>
         </section>
 
@@ -117,14 +117,14 @@
     <footer>
         <div class="footer-top">
             <div class="footer-logo">
-                <img src="BrightSproutLogo.png" alt="BrightSproutLogo" />
+                <img src="clientimages/brightsproutlogo.png" alt="BrightSproutLogo" />
             </div>
 
             <div class="footer-socials">
-                <a href="#"><img src="facebook.png" alt="facebook" /></a>
-                <a href="#"><img src="linkedin.png" alt="linkedin" /></a>
-                <a href="#"><img src="youtube.png" alt="youtube" /></a>
-                <a href="#"><img src="instagram.png" alt="instagram" /></a>
+                <a href="#"><img src="socialicons/facebook.png" alt="facebook" /></a>
+                <a href="#"><img src="socialicons/linkedin.png" alt="linkedin" /></a>
+                <a href="#"><img src="socialicons/youtube.png" alt="youtube" /></a>
+                <a href="#"><img src="socialicons/instagram.png" alt="instagram" /></a>
             </div>
 
             <div class="footer-contact">
