--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             </div>
 
             <div class="gallery-row">
-                <img src="house2.jpg" alt="Landscape Example 1" />
-                <img src="patio.jpg" alt="Landscape Example 2" />
-                <img src="house1.jpg" alt="Landscape Example 3" />
+                <img src="clientimages/house2.jpg" alt="Landscape Example 1" />
+                <img src="clientimages/patio.jpg" alt="Landscape Example 2" />
+                <img src="clientimages/house1.jpg" alt="Landscape Example 3" />
             </div>
 
             <div><a href="gallery.html" class="gallery-button-class">View More!</a></div>
