--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
     <main>
 
         <section class="hero">
-            <img src="clientimages/house3after.png" alt="Beautiful Landscape" class="hero-image" />
+            <img src="clientimages/house3after(actual).png" alt="Beautiful Landscape" class="hero-image" />
             <div class="hero-text">
                 <h1>Our Services</h1>
                 <p>Take a look at all we have to offer!</p>
@@ -39,166 +39,141 @@
             </div>
         </section>
 
-        <body>
+        <table>
+            <tr>
+                <th class="greenTable header-bg">Packages</th>
+                <th class="header-bg">Details</th>
+                <th class="greenTable header-bg">Prices</th>
+            </tr>
+            <tr>
+                <td class="greenTable cell-bg">
+                    <p>1. Sprout Plan</p>
+                    <p>2. Growth Plan</p>
+                    <p>3. Bloom Plan</p>
+                </td>
+                <td>
+                    <p>1. On-site consultation, basic layout plan (front or back yard), plant selection guide (native & low-water species).</p>
+                    <p>2. Full-yard design (front & back), custom planting plan, soil and irrigation recommendations, 3D concept images.</p>
+                    <p>3. Full-yard design, sourcing & coordinating plant delivery, design adjustments post-installation, one follow-up maintenance visit.</p>
+                </td>
+                <td class="greenTable cell-bg">
+                    <p>1. $250</p>
+                    <p>2. $750</p>
+                    <p>3. $1,200</p>
+                </td>
+            </tr>
+        </table>
 
-            <!--Services Table -->
+        <table>
+            <tr>
+                <th class="greenTable header-bg">Lawn Services</th>
+                <th class="header-bg">Details</th>
+                <th class="greenTable header-bg">Prices</th>
+            </tr>
+            <tr>
+                <td class="greenTable cell-bg">
+                    <p>1. Sod Installation</p>
+                    <p>2. Native Grass Seeding</p>
+                    <p>3. Monthly Maintenance</p>
+                </td>
+                <td>
+                    <p>1. Preparation, soil amendment, sod laying, first watering, starter care instructions.</p>
+                    <p>2. Eco-conscious seeding blend, soil prep, slow-release fertilizer.</p>
+                    <p>3. Mowing, edging, organic fertilization, weed control.</p>
+                </td>
+                <td class="greenTable cell-bg">
+                    <p>1. $2.50–$4.50 per sq. ft.</p>
+                    <p>2. $1,000–$1,500 per yard</p>
+                    <p>3. $150–$250/month</p>
+                </td>
+            </tr>
+        </table>
 
-            <!--Packages-->
-            <table>
-                <tr>
-                    <th class=greenTable bgcolor="#dfd6bb">Packages</th>
-                    <th bgcolor="#dfd6bb">Details</th>
-                    <th class=greenTable bgcolor="#dfd6bb">Prices</th>
-                </tr>
+        <table>
+            <tr>
+                <th class="greenTable header-bg">Irrigation Systems</th>
+                <th class="header-bg">Details</th>
+                <th class="greenTable header-bg">Prices</th>
+            </tr>
+            <tr>
+                <td class="greenTable cell-bg">
+                    <p>1. Basic Drip System</p>
+                    <p>2. Smart Yard System</p>
+                    <p>3. Rain Harvest Integration</p>
+                </td>
+                <td>
+                    <p>1. Drip irrigation for gardens, programmable timer.</p>
+                    <p>2. Drip & micro-sprinklers, app-controlled water schedule, rain sensor.</p>
+                    <p>3. Smart system plus rainwater catchment barrels and filtration.</p>
+                </td>
+                <td class="greenTable cell-bg">
+                    <p>1. $850</p>
+                    <p>2. $1,500</p>
+                    <p>3. $2,200</p>
+                </td>
+            </tr>
+        </table>
 
-                <tr>
-                    <td  class=greenTable bgcolor="#5e785e">
-                        <p>1. Sprout Plan</p>
-                        <p>2. Growth Plan</p>
-                        <p>3. Bloom Plan</p>
-                    </td>
+        <table>
+            <tr>
+                <th class="greenTable header-bg">Seasonal Services</th>
+                <th class="header-bg">Details</th>
+                <th class="greenTable header-bg">Prices</th>
+            </tr>
+            <tr>
+                <td class="greenTable cell-bg">
+                    <p>1. Spring Prep</p>
+                    <p>2. Fall Ready</p>
+                    <p>3. Storm Recovery</p>
+                </td>
+                <td>
+                    <p>1. Leaf & debris removal, bed prep, pruning, first fertilization.</p>
+                    <p>2. Leaf & debris removal, perennial cutbacks, winter fertilizer.</p>
+                    <p>3. Branch & debris clearing, lawn recovery treatments.</p>
+                </td>
+                <td class="greenTable cell-bg">
+                    <p>1. $200–$450</p>
+                    <p>2. $200–$450</p>
+                    <p>3. Starting at $150</p>
+                </td>
+            </tr>
+        </table>
 
-                    <td>
-                        <p>1. On-site consultation, basic layout plan (front or back yard), plant selection guide (native & low-water species).</p>
-                        <p>2. Full-yard design (front & back), custom planting plan, soil and irrigation recommendations, 3D concept images.</p>
-                        <p>3. Full-yard design, sourcing & coordinating plant delivery, design adjustments post-installation, one follow-up maintenance visit.</p>
-                    </td>
+        <table>
+            <tr>
+                <th class="greenTable header-bg">Specialty Add-Ons</th>
+                <th class="header-bg">Details</th>
+                <th class="greenTable header-bg">Prices</th>
+            </tr>
+            <tr>
+                <td class="greenTable cell-bg">
+                    <p>1. Patio planters and decorative pots</p>
+                    <p>2. Pollinator Garden Installation</p>
+                    <p>3. Low voltage garden lighting</p>
+                </td>
+                <td>
+                    <p>1. Selection, planting, placement.</p>
+                    <p>2. Bee & butterfly-friendly plants, signage.</p>
+                    <p>3. Path & accent lights, timer or solar powered.</p>
+                </td>
+                <td class="greenTable cell-bg">
+                    <p>$50–$200 each</p>
+                    <p>$300–$700</p>
+                    <p>$400–$1,000</p>
+                </td>
+            </tr>
+        </table>
 
-                    <td class=greenTable bgcolor="#5e785e">
-                        <p>1. $250</p>
-                        <p>2. $750</p>
-                        <p>3. $1,200</p>
-                    </td>
-                </tr>
-            </table>
-
-            <!-- Lawn Services-->
-            <table>
-                <tr>
-                    <th class=greenTable bgcolor="#dfd6bb">Lawn Services</th>
-                    <th bgcolor="#dfd6bb">Details</th>
-                    <th class=greenTable bgcolor="#dfd6bb">Prices</th>
-                </tr>
-
-                <tr>
-                    <td  class=greenTable bgcolor="#5e785e">
-                        <p>1. Sod Installation</p>
-                        <p>2. Native Grass Seeding</p>
-                        <p>3. Monthly Maintenance</p>
-                    </td>
-
-                    <td>
-                        <p>1. Preparation, soil amendment, sod laying, first watering, starter care instructions.</p>
-                        <p>2. Eco-conscious seeding blend, soil prep, slow-release fertilizer.</p>
-                        <p>3. Mowing, edging, organic fertilization, weed control.</p>
-                    </td>
-                    <td class=greenTable bgcolor="#5e785e">
-                        <p>1. $2.50–$4.50 per sq. ft.</p>
-                        <p>2. $1,000–$1,500 per yard </p>
-                        <p> 3. $150–$250/month</p>
-                    </td>
-                </tr>
-            </table>
-
-            <!--Irrigation Systems-->
-            <table>
-                <tr>
-                    <th class=greenTable bgcolor="#dfd6bb">Irrigation Systems</th>
-                    <th bgcolor="#dfd6bb">Details</th>
-                    <th class=greenTable bgcolor="#dfd6bb">Prices</th>
-                </tr>
-
-                <tr>
-                    <td  class=greenTable bgcolor="#5e785e">
-                        <p>1. Basic Drip System</p>
-                        <p>2. Smart Yard System</p>
-                        <p>3. Rain Harvest Integration</p>
-                    </td>
-
-                    <td>
-                        <p>1. Drip irrigation for gardens, programmable timer.</p>
-                        <p>2. Drip & micro-sprinklers, app-controlled water schedule, rain sensor.</p>
-                        <p>3. Smart system plus rainwater catchment barrels and filtration.</p>
-                    </td>
-
-                    <td  class=greenTable bgcolor="#5e785e">
-                        <p>1. $850</p>
-                        <p>2. $1,500</p>
-                        <p>3. $2,200</p>
-                    </td>
-                </tr>
-            </table>
-
-            <!--Seasonal Services-->
-            <table>
-                <tr>
-                    <th class=greenTable bgcolor="#dfd6bb">Seasonal Services</th>
-                    <th bgcolor="#dfd6bb">Details</th>
-                    <th class=greenTable bgcolor="#dfd6bb">Prices</th>
-                </tr>
-
-                <tr>
-                    <td class=greenTable bgcolor="#5e785e">
-                        <p>1. Spring Prep</p>
-                        <p>2. Fall Ready</p>
-                        <p>3. Storm Recovery</p>
-                    </td>
-
-                    <td>
-                        <p>1. Leaf & debris removal, bed prep, pruning, first fertilization.</p>
-                        <p>2. Leaf & debris removal, perennial cutbacks, winter fertilizer.</p>
-                        <p>3. Branch & debris clearing, lawn recovery treatments.</p>
-                    </td>
-
-                    <td class=greenTable bgcolor="#5e785e">
-                        <p>1. $200–$450</p>
-                        <p>2. $200–$450</p>
-                        <p>3. Starting at $150</p>
-                    </td>
-                </tr>
-            </table>
-
-            <!--Specialty Add-ons-->
-            <table>
-                <tr>
-                    <th class=greenTable bgcolor="#dfd6bb">Specialty Add-Ons</th>
-                    <th bgcolor="#dfd6bb">Details</th>
-                    <th class=greenTable bgcolor="#dfd6bb">Prices</th>
-                </tr>
-
-                <tr>
-                    <td class=greenTable bgcolor="#5e785e">
-                        <p>1. Patio planters and decorative pots</p>
-                        <p>2. Pollinator Garden Installation</p>
-                        <p>3. Low voltage garden lighting</p>
-                    </td>
-
-                    <td>
-                        <p>1. Selection, planting, placement.</p>
-                        <p>2. Bee & butterfly-friendly plants, signage.</p>
-                        <p>3. Path & accent lights, timer or solar powered.</p>
-                    </td>
-
-                    <td class=greenTable bgcolor="#5e785e">
-                        <p>$50–$200 each</p>
-                        <p>$300–$700</p>
-                        <p>$400–$1,000</p>
-                    </td>
-                </tr>
-            </table>
-
-        </body>
         <section class="cards">
             <div class="card">
                 <h2>Schedule Service or FREE Quote Today!</h2>
             </div>
         </section>
-        <!--This is the form for scheduling services or a free quote -->
-        <section class="form">
 
+        <section class="form">
             <form action="index.php" method="post">
                 <label for="emailAddress">Email Address</label>
-                <input type="text" id="emailAddress" name="emailAddress" placeholder="bsprout.landscaping@gmail.com" required><br>
+                <input type="email" id="emailAddress" name="emailAddress" placeholder="bsprout.landscaping@gmail.com" required><br>
 
                 <label for="phoneNumber">Phone Number:</label>
                 <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required><br>
@@ -206,8 +181,6 @@
                 <label for="jobDate">Day of Service</label>
                 <input type="date" id="jobDate" name="jobDate"><br>
 
-                <!--The freeQuote is required and placed before the rest of the questions
-                    so people can select the service they want a quote for -->
                 <label for="freeQuote">Are you scheduling a free quote?</label>
                 <input type="checkbox" id="freeQuote" name="freeQuote" required><br>
 
@@ -244,14 +217,14 @@
     <footer>
         <div class="footer-top">
             <div class="footer-logo">
-                <img src="BrightSproutLogo.png" alt="BrightSproutLogo" />
+                <img src="clientimages/brightsproutlogo.png" alt="BrightSproutLogo" />
             </div>
 
             <div class="footer-socials">
-                <a href="#"><img src="facebook.png" alt="facebook" /></a>
-                <a href="#"><img src="linkedin.png" alt="linkedin" /></a>
-                <a href="#"><img src="youtube.png" alt="youtube" /></a>
-                <a href="#"><img src="instagram.png" alt="instagram" /></a>
+                <a href="#"><img src="socialicons/facebook.png" alt="facebook" /></a>
+                <a href="#"><img src="socialicons/linkedin.png" alt="linkedin" /></a>
+                <a href="#"><img src="socialicons/youtube.png" alt="youtube" /></a>
+                <a href="#"><img src="socialicons/instagram.png" alt="instagram" /></a>
             </div>
 
             <div class="footer-contact">
