--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="BrightSproutLogo.png" alt="BrightSproutLogo" />
+            <img src="clientimages/brightsproutlogo.png" alt="BrightSproutLogo" />
         </div>
 
         <nav>
@@ -26,7 +26,7 @@
     <main>
 
         <section class="hero">
-            <img src="clientimages/house3after.png" alt="Beautiful Landscape" class="hero-image">
+            <img src="clientimages/house3after(actual).png" alt="Beautiful Landscape" class="hero-image">
             <div class="hero-text">
                 <h1>Contact Us</h1>
                 <p>Learn our values and how to contact us.</p>
@@ -91,30 +91,30 @@
             </p>
         </section>
 
-           <section class="Form">
+        <section class="Form">
             <section class="cards">
                 <div class="card">
                     <h2>Contact Us</h2>
                 </div>
             </section>
-        <!--Form to get in contact with us-->
-        <section class="form">
-            <form action="index.php" method="post">
-                <label for="firstName">First Name</label>
-                <input type="text" id="firstName" placeholder="Jamie" required>
+            <!--Form to get in contact with us-->
+            <section class="form">
+                <form action="index.php" method="post">
+                    <label for="firstName">First Name</label>
+                    <input type="text" id="firstName" placeholder="Jamie" required>
 
-                <label for="lastName">Last Name</label>
-                <input type="text" id="lastName" placeholder="Rivers" required><br>
+                    <label for="lastName">Last Name</label>
+                    <input type="text" id="lastName" placeholder="Rivers" required><br>
 
-                <label for="emailAddress">Email Address</label>
-                <input type="text" id="emailAddress" placeholder="bsprout.landscaping@gmail.com" required><br>
+                    <label for="emailAddress">Email Address</label>
+                    <input type="text" id="emailAddress" placeholder="bsprout.landscaping@gmail.com" required><br>
 
-                <label for="message">Message:</label>
-                <input type="text" id="message" required>
-                
-                <input type="reset" value="Reset">
-                <input type="submit" value="Submit">
-            </form>
+                    <label for="message">Message:</label>
+                    <input type="text" id="message" required>
+
+                    <input type="reset" value="Reset">
+                    <input type="submit" value="Submit">
+                </form>
             </section>
         </section>
 
@@ -123,14 +123,14 @@
     <footer>
         <div class="footer-top">
             <div class="footer-logo">
-                <img src="BrightSproutLogo.png" alt="BrightSproutLogo" />
+                <img src="clientimages/brightsproutlogo.png" alt="BrightSproutLogo" />
             </div>
 
             <div class="footer-socials">
-                <a href="#"><img src="facebook.png" alt="facebook" /></a>
-                <a href="#"><img src="linkedin.png" alt="linkedin" /></a>
-                <a href="#"><img src="youtube.png" alt="youtube" /></a>
-                <a href="#"><img src="instagram.png" alt="instagram" /></a>
+                <a href="#"><img src="socialicons/facebook.png" alt="facebook" /></a>
+                <a href="#"><img src="socialicons/linkedin.png" alt="linkedin" /></a>
+                <a href="#"><img src="socialicons/youtube.png" alt="youtube" /></a>
+                <a href="#"><img src="socialicons/instagram.png" alt="instagram" /></a>
             </div>
 
             <div class="footer-contact">
