--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <article class="review">
                     <p>“Carlos set up a drip irrigation system for us, and it’s been awesome. The plants are healthier.
                         And we’re paying less on our water bill. Simple and smart.”</p>
-                    <span class="author">- Derek &amp; Monique H..</span>
+                    <span class="author">- Derek &amp; Monique H.</span>
                 </article>
                 <article class="review">
                     <p>“We had BrightSprout redo our backyard lawn, and it’s holding up really well.
